CAMEL-10141: make camel-eip-documentation-enricher-maven-plugin tests pass on Java 9